# goldsrc-sdk

src/: CMakeLists.txt  createlist.cmd  filelist.txt
src/cl_dll/: MOTD.cpp  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  cdll_int.cpp  death.cpp  flashlight.cpp  geiger.cpp  health.cpp  hud.cpp  hud_msg.cpp  hud_redraw.cpp  hud_update.cpp  menu.cpp  message.cpp  readme.txt  saytext.cpp  scoreboard.cpp  status_icons.cpp  statusbar.cpp  text_message.cpp  train.cpp  util.cpp
src/cl_dll/inc/: ammo.h  ammohistory.h  cl_dll.h  health.h  hud.h  util.h
src/dlls/: aflock.cpp  agrunt.cpp  airtank.cpp  animating.cpp  animation.cpp  apache.cpp  barnacle.cpp  barney.cpp  bigmomma.cpp  bloater.cpp  bmodels.cpp  bullsquid.cpp  buttons.cpp  cbase.cpp  client.cpp  combat.cpp  controller.cpp  crossbow.cpp  crowbar.cpp  defaultai.cpp  doors.cpp  effects.cpp  egon.cpp  explode.cpp  flyingmonster.cpp  func_break.cpp  func_tank.cpp  game.cpp  gamerules.cpp  gargantua.cpp  gauss.cpp  genericmonster.cpp  ggrenade.cpp  globals.cpp  glock.cpp  gman.cpp  h_ai.cpp  h_battery.cpp  h_cine.cpp  h_cycler.cpp  (+56 more)
src/dlls/inc/: effects.h  extdll.h  weapons.h
src/engine/inc/: cdll_int.h
