cmake_minimum_required(VERSION 3.5)
project(HALFLIFE)

add_library(cl_dll SHARED 
"${CMAKE_SOURCE_DIR}/cl_dll/ammo.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/ammo_secondary.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/ammohistory.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/battery.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/cdll_int.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/death.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/flashlight.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/geiger.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/health.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/hud.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/hud_msg.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/hud_redraw.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/hud_update.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/menu.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/message.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/MOTD.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/parsemsg.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/saytext.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/scoreboard.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/status_icons.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/statusbar.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/text_message.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/train.cpp"
"${CMAKE_SOURCE_DIR}/cl_dll/util.cpp"
)

add_library(dlls SHARED
"${CMAKE_SOURCE_DIR}/dlls/aflock.cpp"
"${CMAKE_SOURCE_DIR}/dlls/agrunt.cpp"
"${CMAKE_SOURCE_DIR}/dlls/airtank.cpp"
"${CMAKE_SOURCE_DIR}/dlls/animating.cpp"
"${CMAKE_SOURCE_DIR}/dlls/animation.cpp"
"${CMAKE_SOURCE_DIR}/dlls/apache.cpp"
"${CMAKE_SOURCE_DIR}/dlls/barnacle.cpp"
"${CMAKE_SOURCE_DIR}/dlls/barney.cpp"
"${CMAKE_SOURCE_DIR}/dlls/bigmomma.cpp"
"${CMAKE_SOURCE_DIR}/dlls/bloater.cpp"
"${CMAKE_SOURCE_DIR}/dlls/bmodels.cpp"
"${CMAKE_SOURCE_DIR}/dlls/bullsquid.cpp"
"${CMAKE_SOURCE_DIR}/dlls/buttons.cpp"
"${CMAKE_SOURCE_DIR}/dlls/cbase.cpp"
"${CMAKE_SOURCE_DIR}/dlls/client.cpp"
"${CMAKE_SOURCE_DIR}/dlls/combat.cpp"
"${CMAKE_SOURCE_DIR}/dlls/controller.cpp"
"${CMAKE_SOURCE_DIR}/dlls/crossbow.cpp"
"${CMAKE_SOURCE_DIR}/dlls/crowbar.cpp"
"${CMAKE_SOURCE_DIR}/dlls/defaultai.cpp"
"${CMAKE_SOURCE_DIR}/dlls/doors.cpp"
"${CMAKE_SOURCE_DIR}/dlls/effects.cpp"
"${CMAKE_SOURCE_DIR}/dlls/egon.cpp"
"${CMAKE_SOURCE_DIR}/dlls/explode.cpp"
"${CMAKE_SOURCE_DIR}/dlls/flyingmonster.cpp"
"${CMAKE_SOURCE_DIR}/dlls/func_break.cpp"
"${CMAKE_SOURCE_DIR}/dlls/func_tank.cpp"
"${CMAKE_SOURCE_DIR}/dlls/game.cpp"
"${CMAKE_SOURCE_DIR}/dlls/gamerules.cpp"
"${CMAKE_SOURCE_DIR}/dlls/gargantua.cpp"
"${CMAKE_SOURCE_DIR}/dlls/gauss.cpp"
"${CMAKE_SOURCE_DIR}/dlls/genericmonster.cpp"
"${CMAKE_SOURCE_DIR}/dlls/ggrenade.cpp"
"${CMAKE_SOURCE_DIR}/dlls/globals.cpp"
"${CMAKE_SOURCE_DIR}/dlls/glock.cpp"
"${CMAKE_SOURCE_DIR}/dlls/gman.cpp"
"${CMAKE_SOURCE_DIR}/dlls/h_ai.cpp"
"${CMAKE_SOURCE_DIR}/dlls/h_battery.cpp"
"${CMAKE_SOURCE_DIR}/dlls/h_cine.cpp"
"${CMAKE_SOURCE_DIR}/dlls/h_cycler.cpp"
"${CMAKE_SOURCE_DIR}/dlls/h_export.cpp"
"${CMAKE_SOURCE_DIR}/dlls/handgrenade.cpp"
"${CMAKE_SOURCE_DIR}/dlls/hassassin.cpp"
"${CMAKE_SOURCE_DIR}/dlls/headcrab.cpp"
"${CMAKE_SOURCE_DIR}/dlls/healthkit.cpp"
"${CMAKE_SOURCE_DIR}/dlls/hgrunt.cpp"
"${CMAKE_SOURCE_DIR}/dlls/hornet.cpp"
"${CMAKE_SOURCE_DIR}/dlls/hornetgun.cpp"
"${CMAKE_SOURCE_DIR}/dlls/houndeye.cpp"
"${CMAKE_SOURCE_DIR}/dlls/ichthyosaur.cpp"
"${CMAKE_SOURCE_DIR}/dlls/islave.cpp"
"${CMAKE_SOURCE_DIR}/dlls/items.cpp"
"${CMAKE_SOURCE_DIR}/dlls/leech.cpp"
"${CMAKE_SOURCE_DIR}/dlls/lights.cpp"
"${CMAKE_SOURCE_DIR}/dlls/maprules.cpp"
"${CMAKE_SOURCE_DIR}/dlls/monstermaker.cpp"
"${CMAKE_SOURCE_DIR}/dlls/monsters.cpp"
"${CMAKE_SOURCE_DIR}/dlls/monsterstate.cpp"
"${CMAKE_SOURCE_DIR}/dlls/mortar.cpp"
"${CMAKE_SOURCE_DIR}/dlls/mp5.cpp"
"${CMAKE_SOURCE_DIR}/dlls/multiplay_gamerules.cpp"
"${CMAKE_SOURCE_DIR}/dlls/nihilanth.cpp"
"${CMAKE_SOURCE_DIR}/dlls/nodes.cpp"
"${CMAKE_SOURCE_DIR}/dlls/osprey.cpp"
"${CMAKE_SOURCE_DIR}/dlls/pathcorner.cpp"
"${CMAKE_SOURCE_DIR}/dlls/plane.cpp"
"${CMAKE_SOURCE_DIR}/dlls/plats.cpp"
"${CMAKE_SOURCE_DIR}/dlls/player.cpp"
"${CMAKE_SOURCE_DIR}/dlls/python.cpp"
"${CMAKE_SOURCE_DIR}/dlls/rat.cpp"
"${CMAKE_SOURCE_DIR}/dlls/roach.cpp"
"${CMAKE_SOURCE_DIR}/dlls/rpg.cpp"
"${CMAKE_SOURCE_DIR}/dlls/satchel.cpp"
"${CMAKE_SOURCE_DIR}/dlls/schedule.cpp"
"${CMAKE_SOURCE_DIR}/dlls/scientist.cpp"
"${CMAKE_SOURCE_DIR}/dlls/scripted.cpp"
"${CMAKE_SOURCE_DIR}/dlls/shotgun.cpp"
"${CMAKE_SOURCE_DIR}/dlls/singleplay_gamerules.cpp"
"${CMAKE_SOURCE_DIR}/dlls/skill.cpp"
"${CMAKE_SOURCE_DIR}/dlls/sound.cpp"
"${CMAKE_SOURCE_DIR}/dlls/soundent.cpp"
"${CMAKE_SOURCE_DIR}/dlls/spectator.cpp"
"${CMAKE_SOURCE_DIR}/dlls/squadmonster.cpp"
"${CMAKE_SOURCE_DIR}/dlls/squeakgrenade.cpp"
"${CMAKE_SOURCE_DIR}/dlls/subs.cpp"
"${CMAKE_SOURCE_DIR}/dlls/talkmonster.cpp"
"${CMAKE_SOURCE_DIR}/dlls/teamplay_gamerules.cpp"
"${CMAKE_SOURCE_DIR}/dlls/tempmonster.cpp"
"${CMAKE_SOURCE_DIR}/dlls/tentacle.cpp"
"${CMAKE_SOURCE_DIR}/dlls/triggers.cpp"
"${CMAKE_SOURCE_DIR}/dlls/tripmine.cpp"
"${CMAKE_SOURCE_DIR}/dlls/turret.cpp"
"${CMAKE_SOURCE_DIR}/dlls/util.cpp"
"${CMAKE_SOURCE_DIR}/dlls/weapons.cpp"
"${CMAKE_SOURCE_DIR}/dlls/world.cpp"
"${CMAKE_SOURCE_DIR}/dlls/xen.cpp"
"${CMAKE_SOURCE_DIR}/dlls/zombie.cpp"
)

set(MAIN_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/")

target_include_directories(cl_dll PUBLIC ${MAIN_INCLUDE_DIR})
target_include_directories(dlls PUBLIC ${MAIN_INCLUDE_DIR})